--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
-<html>
-    <p>
-        nmejwoemawoewaoaw
-    </p>
+<html lang = "en">
+
+<meta charset="utf-8">
+
+
+<head>
+    <script src="page.js"></script>
+    <link href="http://fonts.cdnfonts.com/css/minecraft-4" rel="stylesheet">
+    <link rel=”stylesheet” href=”https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css”rel=”nofollow” integrity=”sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm” crossorigin=”anonymous”>
+    <title> My awesome page title</title>
+    <link rel="stylesheet" href="page.css">
+    <link rel="icon" href="https://images.emojiterra.com/twitter/v14.0/512px/1f640.png">
+</head>
+    <body>
+        <div>
+            <p> 
+                here is a picture of balls
+            </p>
+            <button id = "button" onclick="hide()">Balls</button>  
+        </div>
+        
+        <div id="dick">
+            <span class="circle"></span><span class="circle"></span>
+            <span class="rectangle"></span>
+        </div>
+
+    </body>
 </html>
